--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage" : "http://blog.aiminn.top/react-learn",
   "eslintConfig": {
     "extends": "react-app"
   },
