--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "homepage" : "http://blog.aiminn.top/react-learn",
+  "homepage" : "http://blog.aiminn.top/react-learn/build",
   "eslintConfig": {
     "extends": "react-app"
   },
